--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@
 
 @layer components {
   body {
-    @apply dark:bg-black/80;
+    @apply dark:bg-black/80 leading-normal;
   }
 
   .App {
-    @apply flex flex-col items-center;
+    @apply flex flex-col items-center space-y-8;
   }
 }
